apps/alertmanager/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alert-manager.stadthagen.dev`)
      kind: Rule
      services:
        - name: alertmanager
          port: 9093
  tls:
    secretName: alertmanager-tls
